--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build-css": "node_modules/.bin/stylus styles/index.styl -o dist/css",
     "watch-css": "node_modules/.bin/stylus styles/index.styl -o dist/css -w",
     "clean": "rm -rf dist/css && mkdir -p dist/css",
-    "build": "npm run clean && npm run build-css",
+    "build": "npm run clean && npm run build-css && cp logoresearch/*.ico dist/",
     "watch": "npm run clean && npm run watch-css & nodemon app -e js,jade",
     "start": "node app"
   },
