moved the script in its archive dir

--- a/config/settings.json
+++ b/config/settings.json
@@ -12,5 +12,6 @@
       "refreshes": "refreshes2",
       "suggestions": "suggestions"
   },
-  "mongodb": "mongodb://localhost/facebook"
+  "mongodb": "mongodb://localhost/facebook",
+  "port": 4444
 }
