--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "clean": "rm -rf dist/css && mkdir -p dist/css",
     "build": "npm run clean && npm run build-css && cp logoresearch/*.ico dist/ && cp -r node_modules/bootstrap/dist/css/bootstrap.css dist/css && cp -r node_modules/bootstrap/dist/js/bootstrap.js dist/js",
     "watch": "npm run clean && npm run watch-css & nodemon app -e js,jade -c config/settings.json",
-    "start": "node app -c config/settings.json"
+    "start": "node app"
   },
   "author": "Claudio Agosti <claudio@tacticaltech.org>",
   "license": "ISC",
@@ -17,9 +17,6 @@
     "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
-    "d3": "^4.2.0",
-    "d3-line": "0.0.1",
-    "d3-shape": "^1.0.1",
     "debug": "^2.2.0",
     "diskusage": "^0.1.5",
     "express4": "0.0.1",
@@ -28,9 +25,9 @@
     "lodash": "^4.13.1",
     "moment": "^2.14.1",
     "mongodb": "^2.1.8",
+    "nconf": "^0.8.4",
     "socket.io": "^1.4.8",
     "stylus": "^0.54.5",
-    "sweet-scroll": "^1.0.3",
-    "yargs": "^4.8.1"
+    "sweet-scroll": "^1.0.3"
   }
 }
