userTimeLine works well now

--- a/config/settings.json
+++ b/config/settings.json
@@ -1,8 +1,6 @@
 {
-  "dbMountPoint": "/",
-  "apiVersion": [1, 2],
-  "secret": "ThisGetOverwrittenByTheEnvironmentVariable",
   "schema": { 
+      "facebook1": "facebook1",
       "supporters": "supporters2",
       "timeline": "timeline2",
       "refreshes": "refreshes2",
