--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "escvi",
-  "version": "1.0.0",
-  "description": "Claudio's simple -Esigo Sapere Come Veniamo Informati-",
+  "version": "0.9.4",
+  "description": "facebook.tracking.exposed → Esigo Sapere Come Veniamo Informati",
   "main": "app.js",
   "scripts": {
     "build-css": "node_modules/.bin/stylus styles/index.styl -o dist/css",
     "watch-css": "node_modules/.bin/stylus styles/index.styl -o dist/css -w",
     "clean": "rm -rf dist/css && mkdir -p dist/css",
-    "build": "npm run clean && npm run build-css && cp logoresearch/*.ico dist/ && cp -r node_modules/bootstrap/dist/css/bootstrap.css dist/css && cp -r node_modules/bootstrap/dist/js/bootstrap.js dist/js",
+    "build": "npm run clean && npm run build-css && cp logoresearch/*.ico dist/ && cp node_modules/bootstrap/dist/css/bootstrap.css dist/css && cp node_modules/d3/build/d3.min.js dist/js && cp sections/filterbubblesimple.js dist/js",
     "watch": "npm run watch-css & (DEBUG=api-2,token,ESCVI,utils,mongo nodemon app -e js,jade)",
     "start": "node app"
   },
