--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch-css": "node_modules/.bin/stylus styles/index.styl -o dist/css -w",
     "clean": "rm -rf dist/css && mkdir -p dist/css",
     "build": "npm run clean && npm run build-css && cp logoresearch/*.ico dist/ && cp node_modules/bootstrap/dist/css/bootstrap.css dist/css && cp node_modules/d3/build/d3.min.js dist/js && cp sections/filterbubblesimple.js dist/js",
-    "watch": "npm run watch-css & (DEBUG=api-2,token,ESCVI,utils,mongo nodemon app -e js,jade)",
+    "watch": "npm run watch-css & (DEBUG=api-2,ESCVI,utils nodemon app -e js,jade)",
     "start": "node app"
   },
   "author": "Claudio Agosti <claudio@tacticaltech.org>",
