--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build-css": "node_modules/.bin/stylus styles/index.styl -o dist/css",
     "watch-css": "node_modules/.bin/stylus styles/index.styl -o dist/css -w",
     "clean": "rm -rf dist/css && mkdir -p dist/css",
-    "build": "npm run clean && npm run build-css && cp logoresearch/*.ico dist/ && cp node_modules/bootstrap/dist/css/bootstrap.css dist/css && cp node_modules/d3/build/d3.min.js dist/js && cp sections/filterbubblesimple.js dist/js",
-    "watch": "npm run clean && npm run watch-css & (DEBUG=api-2,ESCVI,utils nodemon app -e js,jade)",
+    "build": "npm run clean && npm run build-css && cp logoresearch/*.ico dist/ && cp node_modules/bootstrap/dist/css/bootstrap.css dist/css && cp node_modules/d3/build/d3.min.js dist/js && cp sections/webscripts/*.js dist/js && cp node_modules/lodash/lodash.min.js dist/js",
+    "watch": "npm run watch-css & (DEBUG=api-2,ESCVI,utils nodemon app -e js,jade)",
     "start": "node app"
   },
   "author": "Claudio Agosti <claudio@tacticaltech.org>",
@@ -17,7 +17,7 @@
     "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
-    "d3": "^4.2.1",
+    "c3": "^0.4.11",
     "debug": "^2.2.0",
     "diskusage": "^0.1.5",
     "express4": "0.0.1",
