large text revision

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongodb": "^2.1.8",
     "nconf": "^0.8.4",
     "nodemon": "^1.10.0",
+    "reveal.js": "^3.3.0",
     "socket.io": "^1.4.8",
     "stylus": "^0.54.5",
     "sweet-scroll": "^1.0.3"
