--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
     "c3": "^0.4.11",
+    "crypto": "0.0.3",
     "debug": "^2.2.0",
     "diskusage": "^0.1.5",
     "express4": "0.0.1",
