--- a/userscript/.eslintrc.json
+++ b/userscript/.eslintrc.json
@@ -10,13 +10,10 @@
 
   "env": {
     "es6": true,
-    "node": true
+    "node": true,
+    "mocha": true,
+    "browser": true
   },
-
-  "plugins": [
-    "standard",
-    "promise"
-  ],
 
   "globals": {
     "document": false,
@@ -40,7 +37,7 @@
     "eqeqeq": [2, "allow-null"],
     "func-call-spacing": [2, "never"],
     "handle-callback-err": [2, "^(err|error)$" ],
-    "indent": [2, 2, { "SwitchCase": 1 }],
+    "indent": [2, 4, { "SwitchCase": 1 }],
     "key-spacing": [2, { "beforeColon": false, "afterColon": true }],
     "keyword-spacing": [2, { "before": true, "after": true }],
     "new-cap": [2, { "newIsCap": true, "capIsNew": false }],
@@ -131,7 +128,7 @@
     "padded-blocks": [2, "never"],
     "quotes": [2, "single", { "avoidEscape": true, "allowTemplateLiterals": true }],
     "rest-spread-spacing": [2, "never"],
-    "semi": [2, "never"],
+    "semi": [2, "always"],
     "semi-spacing": [2, { "before": false, "after": true }],
     "space-before-blocks": [2, "always"],
     "space-before-function-paren": [2, "always"],
@@ -145,12 +142,6 @@
     "valid-typeof": 2,
     "wrap-iife": [2, "any"],
     "yield-star-spacing": [2, "both"],
-    "yoda": [2, "never"],
-
-    "standard/object-curly-even-spacing": [2, "either"],
-    "standard/array-bracket-even-spacing": [2, "either"],
-    "standard/computed-property-even-spacing": [2, "even"],
-
-    "promise/param-names": 2
+    "yoda": [2, "never"]
   }
 }
