--- a/userscript/package.json
+++ b/userscript/package.json
@@ -16,8 +16,8 @@
     "build:dist": "rimraf ./dist && cross-env NODE_ENV=production webpack -p",
     "clean": "rimraf ./build ./dist",
     "start": "cross-env NODE_ENV=demo node server.demo.js",
-    "test": "./node_modules/.bin/mocha --compilers js:babel-register --reporter spec",
-    "test:watch": "./node_modules/.bin/mocha -w --compilers js:babel-register --reporter spec"
+    "test": "mocha --compilers js:babel-register --reporter spec",
+    "test:watch": "mocha -w --compilers js:babel-register --reporter spec"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
@@ -43,9 +43,10 @@
     "eslint-config-ascribe-react": "^1.4.0",
     "eslint-plugin-import": "^1.13.0",
     "eslint-plugin-jsx-a11y": "^2.1.0",
+    "eslint-plugin-promise": "^2.0.1",
     "eslint-plugin-react": "^6.1.2",
+    "eslint-plugin-standard": "^2.0.0",
     "extract-text-webpack-plugin": "=2.0.0-beta.1",
-    "jquery": "^3.1.0",
     "mocha": "^3.0.2",
     "postcss-loader": "^0.10.1",
     "react-transform-hmr": "^1.0.4",
@@ -59,6 +60,7 @@
     "arrive": "^2.3.1",
     "cheerio": "^0.20.0",
     "core-js": "^2.4.1",
+    "jquery": "^3.1.0",
     "react": "^15.3.0",
     "react-dom": "^15.3.0"
   }
