progress in the anomalies tester and fixed a refresh/Id/Unique mistake

--- a/config/settings.json
+++ b/config/settings.json
@@ -7,5 +7,6 @@
       "suggestions": "suggestions2"
   },
   "mongodb": "mongodb://localhost/facebook",
-  "port": 8000
+  "port": 8000,
+  "anomaly": 1
 }
