--- a/userscript/package.json
+++ b/userscript/package.json
@@ -13,9 +13,10 @@
   "scripts": {
     "lint": "eslint ./",
     "build": "rimraf ./build && cross-env NODE_ENV=extract webpack",
+    "build:watch": "rimraf ./build && cross-env NODE_ENV=extract webpack -w",
     "build:dist": "rimraf ./dist && cross-env NODE_ENV=production webpack -p",
     "clean": "rimraf ./build ./dist",
-    "start": "cross-env NODE_ENV=demo node server.demo.js",
+    "start": "rimraf ./build && cross-env NODE_ENV=extract webpack -w",
     "test": "mocha --compilers js:babel-register --reporter spec",
     "test:watch": "mocha -w --compilers js:babel-register --reporter spec"
   },
@@ -54,7 +55,8 @@
     "style-loader": "^0.13.1",
     "webpack": "=2.1.0-beta.17",
     "webpack-combine-loaders": "^2.0.0",
-    "webpack-dev-server": "=2.1.0-beta.0"
+    "webpack-dev-server": "=2.1.0-beta.0",
+    "write-file-webpack-plugin": "^3.3.0"
   },
   "dependencies": {
     "arrive": "^2.3.1",
