Add loader for sass

--- a/userscript/package.json
+++ b/userscript/package.json
@@ -49,9 +49,11 @@
     "eslint-plugin-standard": "^2.0.0",
     "extract-text-webpack-plugin": "=2.0.0-beta.1",
     "mocha": "^3.0.2",
+    "node-sass": "^3.10.0",
     "postcss-loader": "^0.10.1",
     "react-transform-hmr": "^1.0.4",
     "rimraf": "^2.5.4",
+    "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "webpack": "=2.1.0-beta.17",
     "webpack-combine-loaders": "^2.0.0",
