--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "escvi",
+  "name": "fbtrex",
   "version": "0.9.4",
   "description": "facebook.tracking.exposed → Esigo Sapere Come Veniamo Informati",
   "main": "app.js",
   "scripts": {
-    "build-css": "node_modules/.bin/stylus styles/index.styl -o dist/css",
+    "build-css": "mkdir -p dist/css && node_modules/.bin/stylus styles/index.styl -o dist/css",
     "watch-css": "node_modules/.bin/stylus styles/index.styl -o dist/css -w",
-    "clean": "rm -rf dist/css dist/js && mkdir -p dist/css && mkdir dist/js ",
-    "build": "npm run clean && npm run build-css && cp styles/*.ico dist/ && cp node_modules/bootstrap/dist/css/bootstrap.* dist/css && cp node_modules/d3/d3.min.js dist/js && cp node_modules/c3/c3.min.js dist/js && cp node_modules/c3/c3.css dist/css && cp node_modules/bootstrap/dist/js/bootstrap.min.js dist/js/ && cp sections/webscripts/*.js dist/js && cp node_modules/lodash/lodash.min.js dist/js && cp node_modules/reveal.js/js/reveal.js dist/js && cp node_modules/reveal.js/css/theme/solarized.css dist/css/reveal-solarized.css && cp node_modules/reveal.js/css/reveal.css dist/css/reveal.css && cp node_modules/reveal.js/lib/js/head.min.js dist/js/reveal-head.min.js && cp node_modules/reveal.js/js/reveal.js dist/js/reveal.min.js && cp node_modules/reveal.js/lib/js/classList.js dist/js/classList.js && cp node_modules/reveal.js/lib/font/league-gothic/* dist/css/ && cp sections/slide-pics/* dist/images # I know I've to use gruntfile.. feel free to PR ;)",
-    "watch": "npm run watch-css & (DEBUG=api-2,analysis,sharding,staticpages,ESCVI,utils nodemon app -e js,jade)",
+    "clean": "rm -rf dist/css dist/js",
+    "build": "V=dist/js/vendor/ && npm run clean && npm run build-css && mkdir -p dist/js/local && mkdir -p dist/images && mkdir -p $V && cp styles/*.ico dist/ && cp node_modules/bootstrap/dist/css/bootstrap.* dist/css && cp node_modules/d3/d3.min.js $V && cp node_modules/c3/c3.min.js $V && cp node_modules/c3/c3.css dist/css && cp node_modules/bootstrap/dist/js/bootstrap.min.js $V && cp sections/webscripts/*.js dist/js/local/ && cp node_modules/lodash/lodash.min.js $V && cp node_modules/reveal.js/js/reveal.js $V && cp node_modules/reveal.js/css/theme/solarized.css dist/css/reveal-solarized.css && cp node_modules/reveal.js/css/reveal.css dist/css/reveal.css && cp node_modules/reveal.js/lib/js/head.min.js $V/reveal-head.min.js && cp node_modules/reveal.js/js/reveal.js $V/reveal.min.js && cp node_modules/reveal.js/lib/js/classList.js $V/classList.js && cp node_modules/reveal.js/lib/font/league-gothic/* dist/css/ && cp sections/slide-pics/* dist/images # I know I've to use gruntfile.. feel free to PR ;)",
+    "watch": "npm run watch-css & (nodemon --config config/nodeamon.json app)",
     "start": "node app"
   },
   "author": "Claudio Agosti <claudio@tacticaltech.org>",
