--- a/userscript/package.json
+++ b/userscript/package.json
@@ -49,6 +49,7 @@
     "eslint-plugin-react": "^6.1.2",
     "eslint-plugin-standard": "^2.0.0",
     "extract-text-webpack-plugin": "=2.0.0-beta.1",
+    "glob": "^7.1.1",
     "mocha": "^3.0.2",
     "node-sass": "^3.10.0",
     "postcss-loader": "^0.10.1",
