Add newRefresh event

--- a/userscript/package.json
+++ b/userscript/package.json
@@ -68,6 +68,7 @@
     "core-js": "^2.4.1",
     "jquery": "^3.1.0",
     "react": "^15.3.0",
-    "react-dom": "^15.3.0"
+    "react-dom": "^15.3.0",
+    "uuid": "^2.0.3"
   }
 }
