Add env variables

--- a/userscript/package.json
+++ b/userscript/package.json
@@ -12,14 +12,14 @@
   },
   "scripts": {
     "lint": "eslint ./",
-    "build": "rimraf ./build && cross-env NODE_ENV=extract webpack",
+    "build": "rimraf ./build && cross-env NODE_ENV=development webpack",
     "start": "npm run build:watch",
-    "build:watch": "cross-env NODE_ENV=demo node server.demo.js",
+    "build:watch": "cross-env NODE_ENV=development node dev-server.js",
+    "build:watch:files": "rimraf ./build && cross-env NODE_ENV=development webpack -w",
     "build:dist": "rimraf ./dist && cross-env NODE_ENV=production webpack -p",
     "clean": "rimraf ./build ./dist",
     "test": "mocha --compilers js:babel-register --reporter spec",
-    "test:watch": "mocha -w --compilers js:babel-register --reporter spec",
-    "deprecated:build:watch": "rimraf ./build && cross-env NODE_ENV=extract webpack -w"
+    "test:watch": "mocha -w --compilers js:babel-register --reporter spec"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
