--- a/userscript/package.json
+++ b/userscript/package.json
@@ -52,6 +52,7 @@
     "glob": "^7.1.1",
     "mocha": "^3.0.2",
     "node-sass": "^3.10.0",
+    "on-build-webpack": "^0.1.0",
     "postcss-loader": "^0.10.1",
     "react-transform-hmr": "^1.0.4",
     "rimraf": "^2.5.4",
@@ -69,6 +70,7 @@
     "jquery": "^3.1.0",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
+    "tweetnacl": "^0.14.3",
     "uuid": "^2.0.3"
   }
 }
