--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "crypto": "0.0.3",
     "debug": "^2.2.0",
     "diskusage": "^0.1.5",
+    "express": "^4.14.0",
     "express4": "0.0.1",
     "geoip": "^0.6.1",
     "jade": "^1.11.0",
