--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
     "express4": "0.0.1",
     "geoip": "^0.6.1",
     "jade": "^1.11.0",
-    "jquery": "^1.9.1",  
+    "jquery": "^1.9.1",
     "lodash": "^4.13.1",
     "moment": "^2.14.1",
     "mongodb": "^2.1.8",
     "nconf": "^0.8.4",
     "node-geoip": "^1.0.1",
     "nodemon": "^1.10.0",
+    "request": "^2.75.0",
     "reveal.js": "^3.3.0",
     "socket.io": "^1.4.8",
     "stylus": "^0.54.5",
