--- a/extension/package.json
+++ b/extension/package.json
@@ -15,7 +15,7 @@
     "build": "rimraf ./build && cross-env NODE_ENV=development webpack && cp manifest.json ./build",
     "start": "npm run build:watch:files",
     "build:watch": "cross-env NODE_ENV=development node dev-server.js",
-    "build:watch:files": "rimraf ./build && cross-env NODE_ENV=development webpack -w",
+    "build:watch:files": "rimraf ./build && mkdir build && cp manifest.json ./build && cross-env NODE_ENV=development webpack -w",
     "build:dist": "./pack-extension.sh || true",
     "clean": "rimraf ./build ./dist",
     "test": "mocha --compilers js:babel-register --reporter spec",
