first pseudo anonymization of userId in RealityMeter

--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
     "c3": "^0.4.11",
-    "d3": "^3.5.17",
     "crypto": "0.0.3",
+    "d3": "^3.5.17",
     "debug": "^2.2.0",
     "diskusage": "^0.1.5",
     "express": "^4.14.0",
+    "food-words": "^1.1.0",
     "geoip": "^0.6.1",
     "jade": "^1.11.0",
     "jquery": "^1.9.1",
