write in the new tables with new v1 structure

--- a/config/settings.json
+++ b/config/settings.json
@@ -1,8 +1,9 @@
 {
   "schema": { 
       "supporters": "supporters4",
-      "impressions": "impressions",
       "timelines": "timelines",
+      "impressions": "impressions",
+      "htmls": "htmls",
       "suggestions": "suggestions",
       "accesses": "accesses4"
   },
