--- a/config/settings.json
+++ b/config/settings.json
@@ -1,12 +1,14 @@
 {
   "schema": { 
-      "supporters": "supporters4",
       "timelines": "timelines",
       "impressions": "impressions",
       "htmls": "htmls",
       "suggestions": "suggestions",
-      "accesses": "accesses4"
+      "accesses": "accesses4",
+      "supporters": "supporters3",
+      "timeline": "timeline3",
+      "refreshes": "refreshes3"
   },
   "mongodb": "mongodb://localhost/facebook",
-  "port": 8000
+  "port": 8001
 }
