--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "request": "^2.75.0",
     "reveal.js": "^3.3.0",
     "socket.io": "^1.4.8",
-    "stylus": "^0.54.5"
+    "stylus": "^0.54.5",
+    "tweetnacl": "^0.14.3"
   }
 }
