--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -13,7 +13,7 @@
   ],
 
   "background": {
-      "scripts": ["./sync.js"],
+      "scripts": ["./background.js"],
       "persistent": false
   },
 
