--- a/config/settings.json
+++ b/config/settings.json
@@ -5,9 +5,7 @@
       "htmls": "htmls",
       "suggestions": "suggestions",
       "accesses": "accesses4",
-      "supporters": "supporters3",
-      "timeline": "timeline3",
-      "refreshes": "refreshes3"
+      "supporters": "supporters4"
   },
   "mongodb": "mongodb://localhost/facebook",
   "port": 8001
