Retrieve userId from cookie

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bs58": "^3.0.0",
     "c3": "^0.4.11",
     "cheerio": "^0.22.0",
+    "cookie": "^0.3.1",
     "crypto": "0.0.3",
     "d3": "^3.5.17",
     "debug": "^2.2.0",
