--- a/package.json
+++ b/package.json
@@ -4,11 +4,8 @@
   "description": "facebook.tracking.exposed → collaborative tool to investigate personalization algorithms",
   "main": "app.js",
   "scripts": {
-    "build-css": "mkdir -p dist/css && node_modules/.bin/stylus styles/index.styl -o dist/css",
-    "watch-css": "node_modules/.bin/stylus styles/index.styl -o dist/css -w",
-    "clean": "rm -rf dist/css dist/js",
-    "build": "V=dist/js/vendor/ && npm run clean && npm run build-css && mkdir -p dist/js/local && mkdir -p dist/images && mkdir -p $V && cp sections/team/*.png sections/team/*.jpg dist/images/ && cp styles/*.ico dist/ && cp node_modules/bootstrap/dist/css/bootstrap.* dist/css && cp sections/keybase.txt dist/ && cp node_modules/jquery/dist/jquery.js $V && cp node_modules/bootstrap/js/collapse.js $V && cp node_modules/d3/d3.min.js $V && cp node_modules/c3/c3.min.js $V && cp node_modules/moment/min/moment.min.js $V && cp node_modules/c3/c3.css dist/css && cp node_modules/bootstrap/dist/js/bootstrap.min.js $V && cp -r sections/webscripts/* dist/js/local/ && cp node_modules/lodash/lodash.min.js $V && cp node_modules/reveal.js/js/reveal.js $V && cp node_modules/reveal.js/css/theme/solarized.css dist/css/reveal-solarized.css && cp node_modules/reveal.js/css/reveal.css dist/css/reveal.css && cp node_modules/reveal.js/lib/js/head.min.js $V/reveal-head.min.js && cp node_modules/reveal.js/js/reveal.js $V/reveal.min.js && cp node_modules/reveal.js/lib/js/classList.js $V/classList.js && cp node_modules/reveal.js/lib/font/league-gothic/* dist/css/ && cp sections/images/* dist/images/ # Someone want to do a Gruntfile PLEASE ? ",
-    "watch": "npm run watch-css & (nodemon --config config/nodeamon.json app)",
+    "build": "bin/copyToDist",
+    "watch": "nodemon --config config/nodeamon.json app",
     "start": "node app"
   },
   "author": "Claudio Agosti <claudio@tracking.exposed>, https://github.com/tracking-exposed/facebook/graphs/contributors",
