--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node app"
   },
   "author": "Claudio Agosti <claudio@tracking.exposed>, https://github.com/tracking-exposed/facebook/graphs/contributors",
-  "license" : "(ISC OR GPL-3.0)",
+  "license": "(ISC OR GPL-3.0)",
   "dependencies": {
     "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
@@ -18,6 +18,7 @@
     "c3": "^0.4.11",
     "cheerio": "^0.22.0",
     "cookie": "^0.3.1",
+    "cors": "^2.8.1",
     "crypto": "0.0.3",
     "d3": "^3.5.17",
     "debug": "^2.2.0",
