working strategy to save the first week data

--- a/config/settings.json
+++ b/config/settings.json
@@ -1,11 +1,11 @@
 {
   "schema": { 
-      "timelines": "timelines",
-      "impressions": "impressions",
-      "htmls": "htmls",
-      "suggestions": "suggestions",
-      "accesses": "accesses",
-      "supporters": "supporters"
+      "timelines": "timelines2",
+      "impressions": "impressions2",
+      "htmls": "htmls2",
+      "suggestions": "suggestions2",
+      "accesses": "accesses2",
+      "supporters": "supporters2"
   },
   "mongodb": "mongodb://localhost/facebook",
   "port": 8000
