error in decoding properly the signature

--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "author": "Claudio Agosti <claudio@tracking.exposed>, https://github.com/tracking-exposed/facebook/graphs/contributors",
   "license": "(ISC OR GPL-3.0)",
   "dependencies": {
+    "base58": "^0.1.0",
     "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
-    "bs58": "^3.0.0",
+    "bs58": "^3.1.0",
     "c3": "^0.4.11",
     "cheerio": "^0.22.0",
     "cookie": "^0.3.1",
@@ -30,6 +31,7 @@
     "lodash": "^4.13.1",
     "moment": "^2.14.1",
     "mongodb": "^2.1.8",
+    "nacl-signature": "^1.0.0",
     "nconf": "^0.8.4",
     "node-geoip": "^1.0.1",
     "nodemon": "^1.10.0",
