--- a/config/settings.json
+++ b/config/settings.json
@@ -1,11 +1,12 @@
 {
   "schema": { 
-      "timelines": "timelines2",
       "impressions": "impressions2",
-      "htmls": "htmls2",
-      "suggestions": "suggestions2",
+      "supporters": "supporters2",
+      "timelines": "timelines2",
       "accesses": "accesses2",
-      "supporters": "supporters2"
+      "htmls": "htmls2",
+
+      "performa": "performa"
   },
   "mongodb": "mongodb://localhost/facebook",
   "password": "overwrittenbyENV",
