testing hourly table initialization logic

--- a/config/settings.json
+++ b/config/settings.json
@@ -7,8 +7,7 @@
       "htmls": "htmls2",
 
       "performa": "performa",
-      "hourlyTI": "hourlyTI",
-      "hourlyPC": "hourlyPC"
+      "hourlyIO": "hourlyIO"
   },
   "mongodb": "mongodb://localhost/facebook",
   "password": "overwrittenbyENV",
