--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^3.3.7",
     "bs58": "^3.1.0",
     "c3": "^0.4.11",
+    "cal-heatmap": "^3.6.2",
     "cheerio": "^0.22.0",
     "cookie": "^0.3.1",
     "cors": "^2.8.1",
