--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "d3": "^3.5.17",
     "debug": "^2.2.0",
     "diskusage": "^0.1.5",
+    "docco": "^0.7.0",
     "express": "^4.14.0",
     "food-words": "^1.1.0",
     "jade": "^1.11.0",
