--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "food-words": "^1.1.0",
     "jade": "^1.11.0",
     "jquery": "^1.9.1",
+    "json-2-csv": "^2.1.0",
     "lodash": "^4.13.1",
     "moment": "^2.14.1",
     "mongodb": "^2.1.8",
