--- a/config/settings.json
+++ b/config/settings.json
@@ -12,5 +12,6 @@
   "mongodb": "mongodb://localhost/facebook",
   "password": "overwrittenbyENV",
   "port": 8000,
-  "htmlMaxAmount": 30
+  "htmlMaxAmount": 30,
+  "NOPERFORMA": true
 }
