--- a/config/settings.json
+++ b/config/settings.json
@@ -7,7 +7,8 @@
       "htmls": "htmls2",
       "alarms": "alarms",
       "performa": "performa",
-      "hourlyIO": "hourlyIO"
+      "hourlyIO": "hourlyIO",
+      "reality": "reality"
   },
   "mongodb": "mongodb://localhost/facebook",
   "password": "overwrittenbyENV",
