--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "docco": "^0.7.0",
     "express": "^4.14.0",
     "food-words": "^1.1.0",
-    "jade": "^1.11.0",
     "jquery": "^1.9.1",
     "lodash": "^4.13.1",
     "moment": "^2.14.1",
@@ -37,6 +36,7 @@
     "nconf": "^0.8.4",
     "node-geoip": "^1.0.1",
     "nodemon": "^1.10.0",
+    "pug": "^2.0.0-beta11",
     "request": "^2.75.0",
     "reveal.js": "^3.3.0",
     "stylus": "^0.54.5",
