--- a/config/settings.json
+++ b/config/settings.json
@@ -8,7 +8,8 @@
       "alarms": "alarms",
       "performa": "performa",
       "hourlyIO": "hourlyIO",
-      "reality": "reality"
+      "reality": "reality",
+      "entities": "entitites"
   },
   "mongodb": "mongodb://localhost/facebook",
   "password": "overwrittenbyENV",
