work in progress for web-extension 1.1.15

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "build": "bin/copyToDist",
     "watch": "nodemon --config config/nodeamon.json app",
-    "test": "mocha --reporter spec",
-    "start": "DEBUG=lib:* node app"
+    "start": "DEBUG=lib:*,-fbtrex node app"
   },
   "author": "Claudio Agosti <claudio@tracking.exposed>, https://github.com/tracking-exposed/facebook/graphs/contributors",
   "license": "(ISC OR GPL-3.0)",
