--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "(ISC OR GPL-3.0)",
   "dependencies": {
     "bluebird": "^3.4.1",
-    "body-parser": "^1.15.2",
+    "body-parser": "^1.18.3",
     "bootstrap": "^3.3.7",
     "bs58": "^3.1.0",
     "c3": "^0.4.11",
@@ -25,19 +25,20 @@
     "d3": "^3.5.17",
     "debug": "^2.2.0",
     "docco": "^0.7.0",
-    "express": "^4.14.0",
+    "express": "^4.16.3",
     "food-words": "^1.1.0",
     "jquery": "^3.0.0",
-    "lodash": "^4.13.1",
-    "moment": "^2.14.1",
+    "jsdom": "^12.0.0",
+    "lodash": "^4.17.10",
+    "moment": "^2.22.2",
     "mongodb": "^2.1.8",
     "nacl-signature": "^1.0.0",
     "nconf": "^0.8.4",
     "node-geoip": "^1.0.1",
-    "nodemon": "^1.10.0",
+    "nodemon": "^1.18.3",
     "pug": "^2.0.0-beta11",
-    "request": "^2.75.0",
-    "reveal.js": "^3.3.0",
+    "request": "^2.88.0",
+    "reveal.js": "^3.7.0",
     "stylus": "^0.54.5",
     "tweetnacl": "^0.14.3"
   },
