--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "request": "^2.88.0",
     "reveal.js": "^3.7.0",
     "stylus": "^0.54.5",
-    "tweetnacl": "^0.14.3"
+    "tweetnacl": "^0.14.3",
+    "elasticsearch":  "^15.2.0",
+    "harmony-reflect": "^1.6.1"  
   },
   "devDependencies": {
     "mocha": "^5.2.0"
