made echoes library work inside docker added Diego as contributor improved Dockerfile added two different index added echo inside events.js "

--- a/config/settings.json
+++ b/config/settings.json
@@ -17,5 +17,6 @@
   "htmlMaxAmount": 1000,
   "NOPERFORMA": true,
   "dandelion": "optional if you are using dandelion",
-  "password": "FbTREXadmin:youSHOULDnotUSEthis"
+  "password": "FbTREXadmin:youSHOULDnotUSEthis",
+  "echoes": {"elasticsearch": {"hosts": ["http://localhost:9200"]}}
 }
