--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "api": "DEBUG=routes:*,lib:*,fbtrex:* node bin/api",
     "static": "DEBUG=routes:*,lib:*,fbtrex:* node bin/static",
     "build": "bin/copyToDist",
-    "watch": "nodemon --config config/nodeamon.json app",
+    "watch": "echo \"this should not work anymore, check docs\"",
     "start": "DEBUG=lib:*,-fbtrex node app",
     "logging": "DEBUG=*,-body-parser:*,-express:*,-send,-fbtrex,-lib:parser,-lib:mongo:* node app >>/tmp/`date +%F`.log"
   },
@@ -27,8 +27,10 @@
     "d3": "^3.5.17",
     "debug": "^2.2.0",
     "docco": "^0.7.0",
+    "elasticsearch": "^15.2.0",
     "express": "^4.16.3",
     "food-words": "^1.1.0",
+    "harmony-reflect": "^1.6.1",
     "jquery": "^3.0.0",
     "jsdom": "^12.0.0",
     "lodash": "^4.17.10",
@@ -42,9 +44,7 @@
     "request": "^2.88.0",
     "reveal.js": "^3.7.0",
     "stylus": "^0.54.5",
-    "tweetnacl": "^0.14.3",
-    "elasticsearch": "^15.2.0",
-    "harmony-reflect": "^1.6.1"
+    "tweetnacl": "^0.14.3"
   },
   "devDependencies": {
     "mocha": "^5.2.0"
