--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "reveal.js": "^3.7.0",
     "stylus": "^0.54.5",
     "tweetnacl": "^0.14.3",
+    "webslides": "^1.4.2",
+    "webslides-animation": "^1.0.2",
     "xmldom": "^0.1.27",
     "xpath": "0.0.27"
   },
